--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --config webpack.config.js --mode production",
     "start": "webpack serve --open",
     "ts-check": "tsc"
-    },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mustafasavul/rick-morty-case"
@@ -16,7 +16,8 @@
     "rick",
     "morty",
     "case",
-    "study"],
+    "study"
+  ],
   "author": "Mustafa Savul",
   "license": "ISC",
   "bugs": {
@@ -32,6 +33,12 @@
     "@types/react-dom": "^18.2.18",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
@@ -41,5 +48,8 @@
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "use-debounce": "^10.0.0"
   }
 }
