--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "react-error-boundary": "^4.0.12",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.22.0",
     "use-debounce": "^10.0.0"
   }
 }
