Update manifest.json, package.json, and index.html*** ***Add interface.ts and Loader component*** ***Remove index.ts, Home.tsx, and App.tsx*** ***Update index.module.css and add DropdownMenu component*** ***Update useCharacterSelection.ts and useCharacterSearch.ts*** ***Remove NotFound component

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "R&M",
-  "name": "Rick and Morty",
+  "name": "React MultiSelect Component",
   "icons": [
     {
       "src": "favicon.ico",
