--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rick-morty-case",
-  "version": "1.0.0",
-  "description": "Rick and Morty Case Study",
+  "name": "react-multi-select-component",
+  "version": "1.0.1",
+  "description": "A simple multi select component for React",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
